# clean-architecture

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
config/dev/: .secrets.toml  config.toml  dev.env
src/app/: run.py
src/app/application/common/exceptions/: __init__.py  base.py  batch.py
src/app/application/common/messages/: messagebus.py
src/app/application/common/ports/: __init__.py  product_repository.py  unit_of_work.py
src/app/application/common/services/: __init__.py  allocation.py  messagebus.py  product_service.py
src/app/domain/commands/: __init__.py  product.py
src/app/domain/entities/: __init__.py  allocate.py  batch.py  product.py
src/app/domain/events/: __init__.py  base.py  product.py
src/app/domain/exceptions/: __init__.py  base.py  batch.py
src/app/entrypoints/api/: main.py
src/app/entrypoints/api/controllers/: api_v1_router.py  root_router.py
src/app/infrastructure/adapters/: __init__.py  base_repository.py  product_repository.py  unit_of_work.py
src/app/infrastructure/persistence_sqla/: registry.py
src/app/infrastructure/persistence_sqla/alembic/: README  (+1 more)
src/app/setup/: app_factory.py
src/app/setup/config/: database.py  loader.py  settings.py
tests/: conftest.py
tests/e2e/presentation/: test_api.py
tests/integration/infrastructure/adapters/: test_repository.py  test_uow.py
tests/unit/application/common/: test_handlers.py  test_services.py
tests/unit/domain/entities/: test_allocate.py  test_batch.py  test_product.py
tests/unit/infrastructure/adapters/: test_repository.py
(+22 files in other folders)
