[project]
name = "clean-architecture"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "alembic-postgresql-enum>=1.8.0",
    "dishka>=1.7.2",
    "fastapi>=0.128.0",
    "fastapi-error-map>=0.9.8",
    "psycopg>=3.3.2",
    "psycopg-binary>=3.3.2",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
    "uvloop>=0.22.1",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.10",
]
